       possible on the current desktop.
     - small bugfix for FreeBSD (Marc van Kempen)
     - menuButton (if defined) on the top
     - Extended semantics for AutoRaise in FocusFollowMouse mode:
                 AutoRaise=-1 
       This will not start an auto timer, but you can raise the most recent
       activated window with a simple click inside the window (= Raise
       on first click)
       

  patchlevel 26:
     - fixed double click problem with java/motif on some X-Servers

  patchlevel 25:
     - smart placement (Cristian Tibirna)
     - "Window Activate" sound event (I simply forgot this one...)
     - more fixes for the sound events

  patchlevel 24:
       - supports the following commands in addition:

     refreshScreen, darkenScreen, logout, commandLine, taskManager,
     configure, winMove, winResize, winMaximize, winRestore,
     winIconify, winClose, winSticky, winOperations, desktop1,
     desktop2, desktop3, desktop4, desktop5, desktop6, desktop7,
     desktop8, desktop+1, desktop+2, desktop-1, desktop-2, desktop%2


  patchlevel 23:
       - support for KDE SOUND EVENTS.
         raises: 
                  "Window Iconify"
                  "Window DeIconify"
                  "Window Maximize"
                  "Window UnMaximize"
                  "Window Sticky"
                  "Window UnSticky"
                  "Window New"
                  "Window Delete"
                  "Window Trans New"
                  "Window Trans Delete"
                  "Logout"
                  "Logout Message"
                  "Window Move Start"
                  "Window Move End"
                  "Window Resize Start"
                  "Window Resize End"

      Also passes KDE_SOUND_EVENT, KDE_REGISTER_SOUND_EVENT and
      KDE_UNREGISTER_SOUND_EVENT to the modules. REGISTER-events are
      stored. That means it is possible to launch the sound module after
      the applications without losing any registered sound-event.

 